--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,3 +15,9 @@
         %li= link_to('NEWS', posts_path)
         %li= link_to('CONTACT')
         %li= link_to('ABOUT')
+      %footer
+        %small.copyright
+        Copyright &copy;
+        = succeed "." do
+          %span 2019
+        cyclemania
