--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,14 +10,20 @@
     %title
       = t('title_with_furigana')
     %body
+    .container
       %header
-      = t('title')
-      %ul
-        %li= link_to('HOME', root_path)
-        %li= link_to('NEWS', posts_path)
-        %li= link_to('CONTACT', new_contact_path)
-        %li= link_to('ABOUT')
-
+      %nav.navbar.navbar-expand.navbar-dark.bg-dark.fixed-top
+        = link_to('CYCLEMANIA', root_path)
+        %ul.navbar-nav.ml-auto
+          %li.nav-item
+            = link_to('HOME', root_path)
+          %li.nav-item
+            = link_to('NEWS', posts_path)
+          %li.nav-item
+            = link_to('CONTACT', new_contact_path)
+          %li.nav-item
+            = link_to('ABOUT')
+    .contents
       = yield
       %footer
         %small.copyright
