--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -1,7 +1,25 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
+header {
+	width: 100%;
+}
+
+h1 {
+	font-size: 2.0rem;
+}
+
 .contents {
   padding-top: 70px;
 
+}
+
+.content_inner {
+	padding: 40px;
+	height: 100px;
+}
+
+footer {
+	padding-bottom: 10px;
+	padding-left: 10px;
 }
