✨Add  About page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,7 @@
           %li.nav-item
             = link_to('CONTACT', new_contact_path)
           %li.nav-item
-            = link_to('ABOUT')
+            = link_to('ABOUT', about_path)
     .contents
       = yield
       %footer.fixed-bottom
