--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -1,3 +1,7 @@
+/*
+ *= require_self
+ *= require_tree .
+ */
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
