--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,20 +1,33 @@
 .content_inner
   %h1 メンバー募集一覧
   %p 共に走るメンバーを探そう
-  %table.table.table-striped.table-bordered
-    %thead
-      %tr
-        %th タイトル
-        %th 内容
-        %th{:colspan => "3"}
-    %tbody
-      - @posts.each do |post|
-        %tr
-          %td= post.title
-          %td= post.body
-          %td= link_to '詳細', post
-          %td= link_to '編集', edit_post_path(post)
-          %td= link_to '削除', post, method: :delete, data: { confirm: '削除しますか？' }
-  %br
-    %button.button.btn.btn-outline-secondary
-      = link_to '募集する', new_post_path
+
+  %column-listing
+    - @posts.each do |post|
+      .card{:style => "width: 18rem;"}
+        .card-body
+          %h5.card-title= post.title
+          %h6.card-subtitle.mb-2.text-muted subtitle
+          %p.card-text= post.body
+          %a.card-link{:href => "#"} 詳細
+          %a.card-link{:href => "#"} 編集
+          %a.card-link{:href => "#"} 削除
+
+
+  -# %table.table.table-striped.table-bordered
+  -#   %thead
+  -#     %tr
+  -#       %th タイトル
+  -#       %th 内容
+  -#       %th{:colspan => "3"}
+  -#   %tbody
+  -#     - @posts.each do |post|
+  -#       %tr
+  -#         %td= post.title
+  -#         %td= post.body
+  -#         %td= link_to '詳細', post
+  -#         %td= link_to '編集', edit_post_path(post)
+  -#         %td= link_to '削除', post, method: :delete, data: { confirm: '削除しますか？' }
+  -# %br
+  -#   %button.button.btn.btn-outline-secondary
+  -#     = link_to '募集する', new_post_path
