✨Update font-size for about page

--- a/app/assets/stylesheets/sub_pages.scss
+++ b/app/assets/stylesheets/sub_pages.scss
@@ -1,11 +1,12 @@
 // Place all the styles related to the sub_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-
 h1 {
+  padding:   20px;
 	font-size: 1.5rem;
 }
 
 p {
-  text-align:center; 
+  font-size: 1rem;
+  text-align: center;
 }
